crates/next-custom-transforms/tests/errors/react-server-components/server-graph/taint-without-config/input.js
import { experimental_taintObjectReference } from 'react'

import { experimental_taintUniqueValue } from 'react'

export default function Page() {
  return null
}
